<resources>
    <string name="app_name">Minum Obat</string>
    <string name="foreground_notification_message">Service is running...</string>
    <string name="home_title">When did your medicine run out ?</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="set_alarm">Set your alarm</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="edit_description">Edit description</string>
    <string name="edit_emergency_phone">Add emergency Call</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="six_ten_minute">60 minute, prepare your medicine</string>
    <string name="five_ten_minute">15 minute remain</string>
    <string name="schedule_page_title">Your next schedule</string>
    <string name="swipe_up">Swipe up to go home</string>
    <string name="emergency_phone">Emergency call</string>
    <string name="edit_doctor_name">Doctor Name</string>
    <string name="next_schedule">Next schedule</string>
    <string name="choose_medicine_type">Choose Type Medicine</string>
    <string name="reguler">Regular</string>
    <string name="reguler_type_description">Normal type medicine</string>
    <string name="inject">Injection</string>
    <string name="inject_type_description">Medicine type that need to be inject</string>
</resources>