<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainAppBackground"
    tools:context=".ui.activity.landing.LandingActivity">

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/nunitos_sans_extra_bold"
        android:text="@string/choose_medicine_type"
        android:textColor="@color/mainAppText"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <LinearLayout
            android:id="@+id/layout_regular"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/detail_shcedule_adapter_border_shape_selected"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/nunitos_sans_extra_bold"
                    android:text="@string/reguler"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/pill" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/nunitos_sans_light"
                    android:maxLines="2"
                    android:text="@string/reguler_type_description"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:id="@+id/layout_injection"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/detail_shcedule_adapter_border_shape_selected"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/nunitos_sans_extra_bold"
                    android:text="@string/inject"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/syringe" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/nunitos_sans_light"
                    android:maxLines="2"
                    android:text="@string/inject_type_description"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>