<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/panel_top_radius"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunitos_sans_regular"
                android:gravity="center|left"
                android:text="@string/edit_description"
                android:textColor="@color/mainAppText"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/description_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="top"
                android:inputType="text"
                android:minHeight="120dp"
                android:padding="10dp"
                android:textColor="@color/textColorUnreach"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nunitos_sans_regular"
                android:gravity="center|left"
                android:text="@string/edit_emergency_phone"
                android:textColor="@color/mainAppText"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/phone_emergency_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:gravity="top"
                android:inputType="number"
                android:maxLength="12"
                android:minHeight="80dp"
                android:padding="10dp"
                android:textColor="@color/textColorUnreach"
                tools:ignore="SpeakableTextPresentCheck" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_height="80dp">


            <FrameLayout
                android:id="@+id/cancel_button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:visibility="visible">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunitos_sans_bold"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/mainAppText"
                    android:textSize="18sp" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="20dp"
                android:layout_height="50dp"
                android:visibility="visible" />

            <FrameLayout
                android:id="@+id/add_button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:visibility="visible">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border_reverse"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunitos_sans_bold"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="@color/mainAppTextReverse"
                    android:textSize="18sp" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>